[package]
name = "html-diff"
version = "0.1.0"
edition = "2024"
description = "Semantic HTML diff - compares DOM structure, ignoring whitespace and entity encoding"

[[bin]]
name = "html-diff"
path = "src/main.rs"

[dependencies]
scraper = "0.22"
similar = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
